配置数据库信息

--- a/spring-cloud-biz/src/main/resources/mybatisGenerator/generatorConfig.properties
+++ b/spring-cloud-biz/src/main/resources/mybatisGenerator/generatorConfig.properties
@@ -1,13 +1,13 @@
-# 数据库驱动jar 路径
+# \u6570\u636E\u5E93\u9A71\u52A8jar \u8DEF\u5F84
 drive.class.path=classpath:/mybatisGenerator/mysql-connector-java-5.1.30.jar
 
-# 数据库连接参数
+# \u6570\u636E\u5E93\u8FDE\u63A5\u53C2\u6570
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/test2?characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-jdbc.username=root
-jdbc.password=root
+jdbc.url=jdbc:mysql://127.0.0.1:53306/test2?useSSL=false&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+jdbc.username=bimserver
+jdbc.password=BimServer_LocalUser20!6
 
-# 包路径配置
+# \u5305\u8DEF\u5F84\u914D\u7F6E
 model.package=spring.cloud.biz.dataaccess.dataobject
 dao.package=spring.cloud.biz.dataaccess.mapper
 xml.mapper.package=mapping
