--- a/spring-cloud-account/src/main/resources/application.properties
+++ b/spring-cloud-account/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-#ribbon负载均衡算法
+#ribbon\u8D1F\u8F7D\u5747\u8861\u7B97\u6CD5
 app.moment.ribbon.NFLoadBalancerRuleClassName=com.netflix.loadbalancer.BestAvailableRule
-##ribbon更新serverlist的时间间隔，默认30s
+##ribbon\u66F4\u65B0serverlist\u7684\u65F6\u95F4\u95F4\u9694\uFF0C\u9ED8\u8BA430s
 app.moment.ribbon.ServerListRefreshInterval=5000
 
 app.im.ribbon.NFLoadBalancerRuleClassName=com.netflix.loadbalancer.BestAvailableRule
@@ -14,7 +14,7 @@ app.account.ribbon.ServerListRefreshInterval=5000
 default.readTimeout=10000
 default.connectTimeout=10000
 
-#restTemplate超时时间
+#restTemplate\u8D85\u65F6\u65F6\u95F4
 spring.rest.connection.connection-request-timeout=${default.connectTimeout}
 spring.rest.connection.connect-timeout=${default.connectTimeout}
 spring.rest.connection.read-timeout=${default.readTimeout}
@@ -44,10 +44,10 @@ hystrix.threadpool.default.keepAliveTimeMinutes=1
 # logging
 logging.level.root=info
 
-#mysql 建议配置超时时间
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/test?autoReconnect=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
-spring.datasource.username=root
-spring.datasource.password=root
+#mysql \u5EFA\u8BAE\u914D\u7F6E\u8D85\u65F6\u65F6\u95F4
+spring.datasource.url=jdbc:mysql://127.0.0.1:53306/test?useSSL=false&autoReconnect=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+spring.datasource.username=bimserver
+spring.datasource.password=BimServer_LocalUser20!6
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.testOnBorrow=true
@@ -55,22 +55,22 @@ spring.datasource.validationQuery=SELECT 1
 spring.datasource.initialSize=2
 spring.datasource.minIdle=2
 spring.datasource.maxActive=3000
-# 配置获取连接等待超时的时间
+# \u914D\u7F6E\u83B7\u53D6\u8FDE\u63A5\u7B49\u5F85\u8D85\u65F6\u7684\u65F6\u95F4
 spring.datasource.maxWait=5000
-# 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+# \u914D\u7F6E\u95F4\u9694\u591A\u4E45\u624D\u8FDB\u884C\u4E00\u6B21\u68C0\u6D4B\uFF0C\u68C0\u6D4B\u9700\u8981\u5173\u95ED\u7684\u7A7A\u95F2\u8FDE\u63A5\uFF0C\u5355\u4F4D\u662F\u6BEB\u79D2
 spring.datasource.timeBetweenEvictionRunsMillis=60000
-# 配置一个连接在池中最小生存的时间，单位是毫秒
+# \u914D\u7F6E\u4E00\u4E2A\u8FDE\u63A5\u5728\u6C60\u4E2D\u6700\u5C0F\u751F\u5B58\u7684\u65F6\u95F4\uFF0C\u5355\u4F4D\u662F\u6BEB\u79D2
 spring.datasource.minEvictableIdleTimeMillis=300000
 spring.datasource.testWhileIdle=true
 spring.datasource.testOnReturn=false
-# 打开PSCache，并且指定每个连接上PSCache的大小
+# \u6253\u5F00PSCache\uFF0C\u5E76\u4E14\u6307\u5B9A\u6BCF\u4E2A\u8FDE\u63A5\u4E0APSCache\u7684\u5927\u5C0F
 spring.datasource.poolPreparedStatements=true
 spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
-# 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
+# \u914D\u7F6E\u76D1\u63A7\u7EDF\u8BA1\u62E6\u622A\u7684filters\uFF0C\u53BB\u6389\u540E\u76D1\u63A7\u754C\u9762sql\u65E0\u6CD5\u7EDF\u8BA1\uFF0C'wall'\u7528\u4E8E\u9632\u706B\u5899
 spring.datasource.filters=stat,wall,log4j
-# 通过connectProperties属性来打开mergeSql功能；慢SQL记录
+# \u901A\u8FC7connectProperties\u5C5E\u6027\u6765\u6253\u5F00mergeSql\u529F\u80FD\uFF1B\u6162SQL\u8BB0\u5F55
 spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
-# 合并多个DruidDataSource的监控数据
+# \u5408\u5E76\u591A\u4E2ADruidDataSource\u7684\u76D1\u63A7\u6570\u636E
 #spring.datasource.useGlobalDataSourceStat=true
 
 #transaction
@@ -91,15 +91,15 @@ spring.redis.host=127.0.0.1
 #spring.redis.user=root
 #spring.redis.password=root
 spring.redis.port=6379
-# 连接池中的最大空闲连接
+# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5927\u7A7A\u95F2\u8FDE\u63A5
 spring.redis.pool.max-idle=100
-# 连接池中的最小空闲连接
+# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5
 spring.redis.pool.min-idle=10
-#连接池最大连接数（使用负值表示没有限制）
+#\u8FDE\u63A5\u6C60\u6700\u5927\u8FDE\u63A5\u6570\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
 spring.redis.pool.max-active=1000
-# 连接池最大阻塞等待时间（使用负值表示没有限制）
+# \u8FDE\u63A5\u6C60\u6700\u5927\u963B\u585E\u7B49\u5F85\u65F6\u95F4\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
 spring.redis.pool.max-wait=5000
-# 连接超时时间（毫秒）
+# \u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4\uFF08\u6BEB\u79D2\uFF09
 spring.redis.timeout=2000
 #spring.redis.sentinel.master= # name of Redis server
 #spring.redis.sentinel.nodes= # comma-separated list of host:port pairs
@@ -117,22 +117,22 @@ spring.velocity.properties.input.encoding=UTF-8
 spring.velocity.properties.output.encoding=UTF-8
 spring.velocity.layoutUrl=layout/default.vm
 
-##当页面出错的时候，直接定向到/error.vm
+##\u5F53\u9875\u9762\u51FA\u9519\u7684\u65F6\u5019\uFF0C\u76F4\u63A5\u5B9A\u5411\u5230/error.vm
 server.error.whitelabel.enabled=false
 
-#设置国际化配置文件存放在classpath:/i18n目录下
+#\u8BBE\u7F6E\u56FD\u9645\u5316\u914D\u7F6E\u6587\u4EF6\u5B58\u653E\u5728classpath:/i18n\u76EE\u5F55\u4E0B
 spring.messages.basename=i18n/messages
-#设置加载资源的缓存失效时间，-1表示永久有效，默认为-1
+#\u8BBE\u7F6E\u52A0\u8F7D\u8D44\u6E90\u7684\u7F13\u5B58\u5931\u6548\u65F6\u95F4\uFF0C-1\u8868\u793A\u6C38\u4E45\u6709\u6548\uFF0C\u9ED8\u8BA4\u4E3A-1
 spring.messages.cache-seconds=3600
-#设定message bundles编码方式，默认为UTF-8
+#\u8BBE\u5B9Amessage bundles\u7F16\u7801\u65B9\u5F0F\uFF0C\u9ED8\u8BA4\u4E3AUTF-8
 spring.messages.encoding=UTF-8
 
-#Spring编码
+#Spring\u7F16\u7801
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enable=true
 spring.http.encoding.force=true
 
-#上传文件大小限制
+#\u4E0A\u4F20\u6587\u4EF6\u5927\u5C0F\u9650\u5236
 spring.http.multipart.max-file-size=50Mb
 spring.http.multipart.max-request-size=50Mb
 
